[gd_scene load_steps=5 format=1]

[ext_resource path="res://scenes/Npc/DialogBox.gd" type="Script" id=1]
[ext_resource path="res://assets/Npc/font24Dialog.fnt" type="BitmapFont" id=2]
[ext_resource path="res://scripts/Npc/textBox.gd" type="Script" id=3]
[ext_resource path="res://assets/screen_controls/shadedDark/shadedDark25.png" type="Texture" id=4]

[node name="DialogBox" type="Node"]

script/script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

process/pause_mode = 2
process_mode = 1
wait_time = 0.05
one_shot = false
autostart = true

[node name="layer2" type="CanvasLayer" parent="."]

layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="box" type="Polygon2D" parent="layer2"]

transform/pos = Vector2( 1058.43, 225.7 )
transform/rot = -90.0
transform/scale = Vector2( 1.28, 1.05 )
polygon = Vector2Array( -150, 760, -150, 980, 800, 980, 800, 760 )
uv = Vector2Array(  )
color = Color( 0.14801, 0.159836, 0.195313, 0.941176 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="textBox" type="RichTextLabel" parent="layer2/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -126.0
margin/top = 784.0
margin/right = 682.0
margin/bottom = 958.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0
script/script = ExtResource( 3 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="layer2"]

process/pause_mode = 2
transform/pos = Vector2( 200, 1136 )
transform/rot = -90.0
transform/scale = Vector2( 1.2, 1.2 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[connection signal="timeout" from="Timer" to="layer2/box/textBox" method="_on_Timer_timeout"]

[connection signal="pressed" from="layer2/TouchScreenButton" to="layer2/box/textBox" method="_on_TouchScreenButton_pressed"]


